--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Przykład 71 - Praktyczny projekt: Losowanie Dużego Lotka</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://www.oprinter.pl/github/css/style.css">
 </head>
 <body>
 
